syntax = "proto3";

package lagompb.v1;

option java_package = "io.superflat.lagompb.protobuf.v1";

import "google/protobuf/any.proto";

// used to test a normal command cycle where event are persisted
// and a new state emitted
message TestCommand {
  string company_uuid = 1;
  string name = 2;
}

// used to test NoEvent to be persisted
message NoEventTestCommand {}

// used to test Critical Command Handler Failure
message CriticalFailureTestCommand {}

// used to test NotFound Command Handler Failure
message NotFoundFailureTestCommand{}

// used to test Custom Failure Command Handler Failure
message CustomFailureTestCommand{}

// used to test Unknown Command
message UnknownTestCommand{}

// used to test when the command handler return an empty response
// which will result into a critical error
message EmptyCommandHandlerResponseTestCommand{}

// used to test Unknown Event emitted by a command handler
message UnknownTestEventCommand{}

// used to test event handler failure in the aggregate root
message EventHandlerFailureTestEvent{}

message NoCmd {}

message WrongEventTagger {
}

message TestEvent {
  string event_uuid = 1;
  string name = 2;
}

message TestState {
  string company_uuid = 1;
  string name = 2;
}

message WrongEvent {
  string event_uuid = 1;
}

message TestAny {
  google.protobuf.Any cmd = 1;
}

enum TestEnum {
  ZERO = 0;
  ONE = 1;
  TWO = 2;
}

message Outer {
  string val = 1;
}
